# fantasy-tavern-maker-tui

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
content/: fantasy-tavern-maker-tui-autumn_chalice.md  fantasy-tavern-maker-tui-spring_ice.md
src/: fn_make_pbhouse.rs  fn_save_pbhouse_to_file.rs  fn_view_npc_block.rs  main.rs
src/dice_bag/: mod.rs  tests.rs
src/narrative_time_manager/: mod.rs  tests.rs
src/npc/: impls.rs  lib.rs  mod.rs  table-RandomEyeColor.psv  table-RandomHairColor.psv  table-RandomHairStyle.psv  table-RandomNotableAttributeBonus.psv  table-RandomNotableAttributeStat.psv  table-RandomQuirkEmotional.psv  table-RandomQuirkPhysical.psv  table-RandomSpeciesByWeight.psv  table-RandomTaskDesc.psv  tests.rs
src/tavern/: enums.rs  functions.rs  implementations.rs  mod.rs  structs.rs  tests.rs  traits.rs
src/text_postproc/: mod.rs
