[package]
name = "fantasy-tavern-maker-tui"
version = "0.8.1-116"
edition = "2024"

[dev-dependencies]
pretty_assertions = "1"

[dependencies]
Inflector = "0.11.4"
cursive = { version = "0.21.1" , features = ["crossterm-backend", "markdown", "ansi"] }
inquire = "0.7.5"
is-vowel = "0.1.0"
markdown = "=1.0.0-alpha.23"
rand = "0.9.0"
rand_chacha = "0.9.0"
rand_derive2 = "0.1.21"
random = "0.14.0"
strum = { version = "0.27.1", features = ["derive"] }
strum_macros = "0.27.1"
tera = "1.20.0"
tracing = "0.1.40"
variant_count = "1.1.0"
dirs = "6.0.0"
