[package]
name = "fantasy-tavern-maker-tui"
version = "0.12.4-185"
edition = "2024"

[dev-dependencies]
pretty_assertions = "1"

[dependencies]
Inflector = "0.11.4"
cursive = { version = "0.21.1" , features = ["crossterm-backend", "markdown", "ansi"] }
is-vowel = "0.1.0"
rand = "0.9.1"
rand_chacha = "0.9.0"
strum = { version = "0.27.1", features = ["derive"] }
strum_macros = "0.27.1"
tracing = "0.1.40"
dirs = "6.0.0"
variant_count = "1.1.0"
